--- a/templates/template-card.html
+++ b/templates/template-card.html
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-  <a class="card__link" href="/product?id={%ID%}">
+  <a class="card__link" href="/product/{%PATHNAME%}">
     <span>Detail <i class="emoji-right">👉</i></span>
   </a>
 </figure>
