--- a/views/tour.pug
+++ b/views/tour.pug
@@ -2,6 +2,12 @@ extends base
 
 include _review-card
 
+block append head 
+  script(src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js')
+  link(href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet')
+
+
+
 mixin overviewBox(label, text, icon)
   .overview-box__detail
     svg.overview-box__icon
@@ -67,7 +73,8 @@ block content
         img.picture-box__img(src=`/img/tours/${img}` alt=`${tour.name} ${i + 1}` class=`picture-box__img--${i + 1}`)
 
   section.section-map
-    #map
+    #map(data-locations=`${JSON.stringify(tour.locations)}`)
+    #key(data-apikey='pk.eyJ1Ijoic2hhaC12YXJzaGlsIiwiYSI6ImNsNXczN2I0ZzA5dHczam56YWhtNXBmOXAifQ.hEaDKio6g7A1gTwaX5RP_Q')
 
   section.section-reviews
     .reviews
