--- a/views/_header.pug
+++ b/views/_header.pug
@@ -8,5 +8,5 @@ header.header
         //- a.nav__el
         //-   img.nav__user-img(src='img/user.jpg' alt='User photo')
         //-   span Varshil
-        button.nav__el Login
-        button.nav__el.nav__el--cta Sign up
+        a.nav__el(href='/login') Login
+        a.nav__el.nav__el--cta(href='/signup') Sign up
