--- a/views/base.pug
+++ b/views/base.pug
@@ -20,7 +20,9 @@ html
     // FOOTER
     include _footer
 
+    script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js") 
     script(src='/js/mapbox.js')
+    script(src='/js/login.js') 
 
 
 
