--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,12 +1,14 @@
 header.header
-    nav.nav.nav--tours
-        a.nav__el(href='/') All Tours
-    .header__logo
-        img(src='/img/logo-white.png' alt='Natours logo')
-    nav.nav.nav--user
-        //- a.nav__el(href='#') My bookings
-        //- a.nav__el
-        //-   img.nav__user-img(src='img/user.jpg' alt='User photo')
-        //-   span Varshil
-        a.nav__el(href='/login') Login
-        a.nav__el.nav__el--cta(href='/signup') Sign up
+  nav.nav.nav--tours
+    a.nav__el(href='/') All Tours
+  .header__logo
+    img(src='/img/logo-white.png' alt='Natours logo')
+  nav.nav.nav--user
+    if user
+      a.nav__el.nav__el--logout(href='#') Log Out
+      a.nav__el
+      img.nav__user-img(src=`img/users/${user.photo}` alt='User photo')
+      span.nav__el= user.name.split(' ')[0]
+    else 
+      a.nav__el(href='/login') Login
+      a.nav__el.nav__el--cta(href='/signup') Sign up
