--- a/views/base.pug
+++ b/views/base.pug
@@ -21,8 +21,7 @@ html
     include _footer
 
     script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js") 
-    script(src='/js/mapbox.js')
-    script(src='/js/login.js') 
+    script(src='/js/bundle.js')
 
 
 
