--- a/views/_header.pug
+++ b/views/_header.pug
@@ -7,7 +7,7 @@ header.header
     if user
       a.nav__el.nav__el--logout(href='#') Log Out
       a.nav__el
-      img.nav__user-img(src=`img/users/${user.photo}` alt='User photo')
+      img.nav__user-img(src=`/img/users/${user.photo}` alt='User photo')
       span.nav__el= user.name.split(' ')[0]
     else 
       a.nav__el(href='/login') Login
