--- a/views/account.pug
+++ b/views/account.pug
@@ -39,7 +39,9 @@ block content
               a.btn-text(href='') Choose new photo
             .form__group.right
               button.btn.btn--small.btn--green Save settings
+
         .line &nbsp;
+
         .user-view__form-container
           h2.heading-secondary.ma-bt-md Password change
           form.form.form-user-settings
@@ -53,4 +55,4 @@ block content
               label.form__label(for='password-confirm') Confirm password
               input#password-confirm.form__input(type='password' placeholder='••••••••', required, minlength='8')
             .form__group.right
-              button.btn.btn--small.btn--green Save password
+              button.btn.btn--small.btn--green.btn--save-password Save password
