--- a/views/base.pug
+++ b/views/base.pug
@@ -21,6 +21,7 @@ html
     include _footer
 
     script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js") 
+    script(src="https://js.stripe.com/v3/") 
     script(src='/js/bundle.js')
 
 
