Move all the images to image-kit

--- a/views/tour.pug
+++ b/views/tour.pug
@@ -18,7 +18,7 @@ block content
   section.section-header
     .header__hero
       .header__hero-overlay &nbsp;
-      img.header__hero-img(src=`/img/tours/${tour.imageCover}`, alt=`${tour.name}`)
+      img.header__hero-img(src=`${tour.imageCover}`, alt=`${tour.name}`)
 
     .heading-box
       h1.heading-primary
@@ -50,7 +50,7 @@ block content
           h2.heading-secondary.ma-bt-lg Your tour guides
           each guide in tour.guides
             .overview-box__detail
-              img.overview-box__img(src=`/img/users/${guide.photo}`, alt=`${guide.name}`)
+              img.overview-box__img(src=`${guide.photo}`, alt=`${guide.name}`)
 
               if (guide.role === 'guide')
                 span.overview-box__label= 'Tour guide'
@@ -69,7 +69,7 @@ block content
   section.section-pictures
     each img, i in tour.images
       .picture-box
-        img.picture-box__img(src=`/img/tours/${img}` alt=`${tour.name} ${i + 1}` class=`picture-box__img--${i + 1}`)
+        img.picture-box__img(src=`${img}` alt=`${tour.name} ${i + 1}` class=`picture-box__img--${i + 1}`)
 
   section.section-map
     #map(data-locations=`${JSON.stringify(tour.locations)}`)
@@ -84,8 +84,8 @@ block content
     .cta
       .cta__img.cta__img--logo
         img(src='/img/logo-white.png' alt='Natours logo')
-      img.cta__img.cta__img--1(src=`/img/tours/${tour.images[1]}` alt='Tour picture')
-      img.cta__img.cta__img--2(src=`/img/tours/${tour.images[2]}` alt='Tour picture')
+      img.cta__img.cta__img--1(src=`${tour.images[1]}` alt='Tour picture')
+      img.cta__img.cta__img--2(src=`${tour.images[2]}` alt='Tour picture')
       .cta__content
         h2.heading-secondary What are you waiting for?
         p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
